conditions for player bust/blackjack implemented

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="container-fluid table-cont">
     <div class="row dealer-row justify-content-center">
       <div class="col dealer-col">
+        <p class="dealer-total"></p>
         <h2 class="d-inline-flex">Dealer's Hand</h2>
         <div class="dealer-tray">
         </div>
@@ -20,7 +21,7 @@
     </div>
     <div class="row deck-row d-flex justify-content-end">
       <div class="col-4 title-col">
-        <p>BlackJack</p>
+        <p class="result"></p>
         <button type="button" name="draw" class="draw">Deal</button>
       </div>
       <div class="col-4 deck-col">
