--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <script defer type="text/javascript" src="index.js"></script>
+  <script defer type="text/javascript" src="deck.js"></script>
+  <script defer type="text/javascript" src="deal.js"></script>
+  <script defer type="text/javascript" src="hit&stand.js"></script>
   <title>Blackjack</title>
 </head>
 
@@ -13,9 +15,10 @@
   <div class="container-fluid table-cont">
     <div class="row dealer-row justify-content-center">
       <div class="col dealer-col">
-        <p class="dealer-total"></p>
+        <p class="dealer-total d-none"></p>
         <h2 class="d-inline-flex">Dealer's Hand</h2>
         <div class="dealer-tray">
+
         </div>
       </div>
     </div>
