--- a/index.html
+++ b/index.html
@@ -18,14 +18,23 @@
         <p class="dealer-total d-none"></p>
         <h2 class="d-inline-flex">Dealer's Hand</h2>
         <div class="dealer-tray">
-
         </div>
       </div>
     </div>
     <div class="row deck-row d-flex justify-content-end">
+      <div class="col-2 bet-col">
+        <p>Blackjack pays 3:2</p>
+        <p>Player Token Total: <span class="token-total">300</span></p>
+        <form class="bet-submission">
+          <label>Bet Amount:
+            <input type="number" name="bet-value" min="1" class="bet-input">
+          </label>
+          <input type="submit" name="submit"><br>
+        </form>
+      </div>
       <div class="col-4 title-col">
         <p class="result"></p>
-        <button type="button" name="draw" class="draw">Deal</button>
+        <button type="button" name="draw" class="draw d-none">Deal</button>
       </div>
       <div class="col-4 deck-col">
         <h2>Deck</h2>
@@ -36,20 +45,21 @@
     </div>
     <div class="row player-row">
       <div class="col player-col">
-        <div class="d-inline-flex flex-row align-items-center">
-          <div class="actionHit d-none">
-            <button type="button" name="hit" class="hit">Hit</button>
+        <div class="player-container justify-content-start flex-nowrap">
+          <div class="d-inline-flex flex-row align-items-center">
+            <div class="actionHit d-none">
+              <button type="button" name="hit" class="hit">Hit</button>
+            </div>
+            <div class="player-tray">
+            </div>
+            <div class="actionStand d-none">
+              <button type="button" name="stand" class="stand">Stand</button>
+            </div>
           </div>
-          <div class="player-tray">
-
+          <div class="player-title-line">
+            <h2>Player's Hand</h2>
+            <p class="player-total"></p>
           </div>
-          <div class="actionStand d-none">
-            <button type="button" name="stand" class="stand">Stand</button>
-          </div>
-        </div>
-        <div>
-          <h2 class="d-inline-flex">Player's Hand</h2>
-          <p class="player-total"></p>
         </div>
       </div>
     </div>
