working on betting errors

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     <div class="row deck-row d-flex justify-content-end">
       <div class="col-2 bet-col">
         <p>Blackjack pays 3:2</p>
-        <p>Player Token Total: <span class="token-total">300</span></p>
+        <p>Player Token Total: <span class="token-total">500</span></p>
         <form class="bet-submission">
           <label>Bet Amount:
             <input type="number" name="bet-value" min="1" class="bet-input">
           </label>
           <input type="submit" name="submit"><br>
         </form>
+        <p class="sub-bet"></p>
       </div>
       <div class="col-4 title-col">
         <p class="result"></p>
