--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <div class="player-container justify-content-start flex-nowrap">
           <div class="d-inline-flex flex-row align-items-center">
             <div class="player-tray d-inline-flex">
-              <div class="cardPlaceHolder">
+              <!-- <div class="cardPlaceHolder">
               </div>
               <div class="cardPlaceHolder">
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="player-title-line">
